tests/baselines/reference/twoGenericInterfacesWithTheSameNameButDifferentArity.errors.txt
==== tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesWithTheSameNameButDifferentArity.ts (3 errors) ====
    interface A<T> {
        x: T;
    }
    
    interface A<T, U> { // error
              ~
!!! error TS2428: All declarations of an interface must have identical type parameters.
        y: T;
    }
    
    module M {
        interface A<T> {
            x: T;
        }
    
        interface A<T, U> { // error
                  ~
!!! error TS2428: All declarations of an interface must have identical type parameters.
            y: T;
        }
    }
    
    module M2 {
        interface A<T> {
            x: T;
        }
    }
    
    module M2 {
        interface A<T, U> { // ok, different declaration space than other M2
            y: T;
        }
    }
    
    module M3 {
        export interface A<T> {
            x: T;
        }
    }
    
    module M3 {
        export interface A<T, U> { // error
                         ~
!!! error TS2428: All declarations of an interface must have identical type parameters.
            y: T;
        }
    }